@@ -62,88 +62,14 @@ npm install -g @bttcnetwork/bttc-cli
 bttc-cli -V
 ```
 
-## Event Monitor服务器搭建
-
-Event Monitor用于查询波场上的合约事件。仅Validator需要搭建。使用bttc-cli时，对应TRON grid url一栏。
-
-Event Monitor的搭建步骤如下：
-
-- 安装MongoDB，要求collection为空
-
-- 编译event plugin
-
-    **代码地址**：https://github.com/tronprotocol/event-plugin
-
-    **编译命令**：`./gradlew build -x test`
-
-    **编译结果**：eventplugin/build/plugins/plugin-mongodb-1.0.0.zip，将其放到TRON fullnode配置文件的指定位置（event.subscribe.path）
-
-- 编译TRON fullnode
-
-    **代码地址**：https://github.com/tronprotocol/java-tron
-
-    **编译命令**：`./gradlew build -x test`
-
-    **修改配置文件**：
-
-    ```conf
-    event.subscribe = {
-  native = {
-    useNativeQueue = false // if true, use native message queue, else use event plugin.
-  }
- 
-    path = "/data/bttc-jsonrpc/servers/fullnode/plugin-mongodb-1.0.0.zip" // absolute path of plugin
-    server = "127.0.0.1:27017" // target server address to receive event triggers
-    dbconfig = "eventlog|tron|123456|2" // dbname|username|password
-    topics = [
-        {
-          triggerName = "block" // block trigger, the value can't be modified
-          enable = true
-          topic = "block" // plugin topic, the value could be modified
-          solidified = true
-        },
-        {
-          triggerName = "transaction"
-          enable = true
-          topic = "transaction"
-          ethCompatible = true
-          solidified = true
-        },
-        {
-          triggerName = "solidity" // solidity block event trigger, the value can't be modified
-          enable = true            // the default value is true
-          topic = "solidity"
-        },
-        {
-          triggerName = "soliditylog"
-          enable = true
-          redundancy = true
-          topic = "soliditylog"
-        }
-    ]
- 
-    filter = {
-       fromblock = "" // the value could be "", "earliest" or a specified block number as the beginning of the queried range
-       toblock = "" // the value could be "", "latest" or a specified block number as end of the queried range
-       contractAddress = [
-           // contract address you want to subscribe, if it's set to "", you will receive contract logs/events with any contract address.
-       ]
- 
-       contractTopic = [
-           "" // contract topic you want to subscribe, if it's set to "", you will receive contract logs/events with any contract topic.
-       ]
-    }
-    ```
-
-- 编译bttc-event-monitor
-
-    **代码地址**：
-
-    **编译命令**：`./gradlew build -x test`
-
-    **参考启动命令**：`nohup java -Xmx1g -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -Xloggc:./gc.log -XX:+PrintGCDateStamps -XX:+CMSParallelRemarkEnabled -XX:ReservedCodeCacheSize=256m -XX:+CMSScavengeBeforeRemark -jar -Dspring.config.location=application.yml  bttc-event-monitor-0.0.1-SNAPSHOT.jar >> bttc-event-monitor.log 2>&1 &`
-
 ## 部署节点
+
+::: tip NOTE
+在哨兵机和验证机上都要运行这一部分。
+哨兵节点（全节点）是一个同时运行Delivery节点和BTTC节点的节点，用于从网络上的其他节点下载数据，并在网络上传播验证器数据。
+一个哨兵节点（全节点）对网络上所有其他哨兵节点开放。
+一个验证器节点只对其哨兵节点开放，而对网络的其他节点关闭。
+:::
 
 使用如下命令初始化节点目录：
 
@@ -161,21 +87,16 @@ bttc-cli setup devnet
 ? Please enter Bttc branch or tag master
 ? Please enter Delivery branch or tag master
 ? Please enter Contracts branch or tag stake
-? Please enter number of validator nodes 0 # number of block procducing nodes
-? Please enter number of non-validator nodes 1 # number of full nodes
+? Please enter number of validator nodes 1 # number of validator nodes,if you want to deploy only one fullnode, use 0 instead of 1
+? Please enter number of non-validator nodes 1 # number of sentry nodes(full node)
 ? Please enter ETH url https://mainnet.infura.io/v3/<YOUR_INFURA_KEY>
 ? Please enter BSC url https://bsc-dataseed.binance.org/ # or choose from https://docs.binance.org/smart-chain/developer/rpc.html
 ? Please enter TRON rpc url grpc.trongrid.io:50051
-? Please enter TRON grid url # Please build your own event service
+? Please enter TRON grid url https://tronevent.bt.io/
 ? Please select devnet type remote
 ? Please enter comma separated hosts/IPs
 ```
 
-::: tip NOTE
-仅Validator需要搭建事件监控服务（即TRON grid url对应的url）。普通用户请输入以"http://"开头的任意内容占位即可。
-
-主网不提供公共的事件监控服务，请按照上面的教程自行搭建。
-:::
 
 ### BTTC测试网（Donau, 1029）
 
@@ -185,8 +106,8 @@ bttc-cli setup devnet
 ? Please enter Bttc branch or tag master
 ? Please enter Delivery branch or tag master
 ? Please enter Contracts branch or tag stake
-? Please enter number of validator nodes 0 # number of block procducing nodes
-? Please enter number of non-validator nodes 1 # number of full nodes
+? Please enter number of validator nodes 0 # number of validator nodes,if you want to deploy only one fullnode, use 0 instead of 1
+? Please enter number of non-validator nodes 1 # number of sentry nodes(full node)
 ? Please enter ETH url https://goerli.infura.io/v3/<YOUR_INFURA_KEY>
 ? Please enter BSC url https://data-seed-prebsc-1-s1.binance.org:8545/ # or choose from https://docs.binance.org/smart-chain/developer/rpc.html
 ? Please enter TRON rpc url 47.252.19.181:50051
@@ -200,19 +121,19 @@ bttc-cli setup devnet
 ![image](../pics/node/node-dir.png)
 
 ::: tip NOTE
-在每个 .sh 文件中，请确保 `NODE_DIR` 是正确的。 在这个例子中，`NODE_DIR` 应该是 `/data/bttc/node0`。
+在每个 .sh 文件中，请确保 `NODE_DIR` 是正确的。 在这个例子中，`NODE_DIR` 应该是 `/data/bttc/node`。
 :::
 
-## validator配置
+## sentry节点配置
 
-假设节点的根目录在`/data/bttc/node0`。
+假设sentry节点的根目录在`/data/bttc/node`。
 
-### 配置delivery种子节点
+### 配置delivery sentry节点
 
 #### 节点API_KEY配置
 
 修改delivery-config文件
-目录：`/data/bttc/node0/deliveryd/config/delivery-config.toml`
+目录：`/data/bttc/node/deliveryd/config/delivery-config.toml`
 
 **配置说明：**
 
@@ -227,7 +148,7 @@ bttc-cli setup devnet
 **DEMO：**
 
 ```conf
-vim /data/bttc/node0/deliveryd/config/delivery-config.toml
+vim /data/bttc/node/deliveryd/config/delivery-config.toml
   
 eth_rpc_url = "https://goerli.infura.io/v3/<YOUR_INFURA_KEY>"
 bsc_rpc_url = "https://data-seed-prebsc-1-s1.binance.org:8545/"
@@ -237,13 +158,13 @@ tron_grid_url = "https://test-tronevent.bt.io"
 
 #### 替换创世文件配置
 
-将[genesis-1029](https://github.com/bttcprotocol/launch/blob/master/testnet-1029/sentry/sentry/delivery/config/genesis.json)或[genesis-199](https://github.com/bttcprotocol/launch/blob/master/mainnet-v1/sentry/sentry/delivery/config/genesis.json)替换至路径：`/data/bttc/node0/deliveryd/config/genesis.json`。
+将[genesis-1029](https://github.com/bttcprotocol/launch/blob/master/testnet-1029/sentry/sentry/delivery/config/genesis.json)或[genesis-199](https://github.com/bttcprotocol/launch/blob/master/mainnet-v1/sentry/sentry/delivery/config/genesis.json)替换至路径：`/data/bttc/node/deliveryd/config/genesis.json`。
 
 #### 添加delivery层的node-id
 
-修改配置文件`/data/bttc/node0/deliveryd/config/config.toml`的seeds字段。在[这里](https://github.com/bttcprotocol/launch/tree/master/testnet-1029/without-sentry/delivery)查看测试网seed信息，或在[这里](https://github.com/bttcprotocol/launch/tree/master/mainnet-v1/without-sentry/delivery)查看主网seed信息。
+修改配置文件`/data/bttc/node/deliveryd/config/config.toml`的seeds字段。在[这里](https://github.com/bttcprotocol/launch/tree/master/testnet-1029/sentry/sentry/delivery)查看测试网seed信息，或在[这里](https://github.com/bttcprotocol/launch/tree/master/mainnet-v1/sentry/sentry/delivery)查看主网seed信息。
 
-### 启动Delivery节点
+### 启动Delivery sentry节点
 
 #### 启动delivery
 
@@ -258,25 +179,114 @@ nohup sh delivery-server-start.sh>>logs/rest-server.log 2>&1 &
 nohup sh delivery-bridge-start.sh>>logs/bridge.log 2>&1 &
 ```
 
-### 配置BTTC种子节点
+### 配置BTTC sentry节点
 
 #### 替换BTTC的创世文件
 
-BTTC创世文件路径:`/data/bttc/node0/bttc/genesis.json`
+BTTC创世文件路径:`/data/bttc/node/bttc/genesis.json`
 
 将[genesis-1029](https://github.com/bttcprotocol/launch/blob/master/testnet-1029/sentry/sentry/bttc/genesis.json)或[genesis-199](https://github.com/bttcprotocol/launch/blob/master/mainnet-v1/sentry/sentry/bttc/genesis.json)替换至上述路径。
 
-#### 添加BTTC网络种子节点的node-id
+#### 添加BTTC网络sentry节点的node-id
 
-将[static-nodes-1029](https://github.com/bttcprotocol/launch/blob/master/testnet-1029/sentry/sentry/bttc/static-nodes.json)或[static-nodes-199](https://github.com/bttcprotocol/launch/blob/master/mainnet-v1/sentry/sentry/bttc/static-nodes.json)替换到`/data/bttc/node0/bttc/static-nodes.json`。
+将[static-nodes-1029](https://github.com/bttcprotocol/launch/blob/master/testnet-1029/sentry/sentry/bttc/static-nodes.json)或[static-nodes-199](https://github.com/bttcprotocol/launch/blob/master/mainnet-v1/sentry/sentry/bttc/static-nodes.json)替换到`/data/bttc/node/bttc/static-nodes.json`。
 
-### 初始化BTTC节点
+### 初始化BTTC sentry节点
 
 ```sh
 sh bttc-setup.sh
 ```
 
-### 启动BTTC节点
+### 启动BTTC sentry节点
+
+```sh
+nohup sh bttc-start.sh >>logs/bttc-start.log 2>&1 &
+```
+
+## validator节点配置
+
+假设validator节点的根目录在`/data/bttc/node`。
+
+### 配置delivery validator节点
+
+#### 节点API_KEY配置
+
+修改delivery-config文件
+目录：`/data/bttc/node/deliveryd/config/delivery-config.toml`
+
+**配置说明：**
+
+- eth_rpc_url: 以太坊网络rpc地址。需要自己生成 INFURA_KEY 以便跟以太坊通信。[API_KEY申请教程](https://ethereumico.io/knowledge-base/infura-api-key-guide)
+
+- tron_rpc_url: TRON网络节点的RPC地址。
+
+- tron_grid_url: TRON网络事件服务查询url。
+
+- bsc_rpc_url：BSC网络节点的RPC地址。
+
+**DEMO：**
+
+```conf
+vim /data/bttc/node/deliveryd/config/delivery-config.toml
+  
+eth_rpc_url = "https://goerli.infura.io/v3/<YOUR_INFURA_KEY>"
+bsc_rpc_url = "https://data-seed-prebsc-1-s1.binance.org:8545/"
+tron_rpc_url = "47.252.19.181:50051"
+tron_grid_url = "https://test-tronevent.bt.io"
+```
+
+#### 替换创世文件配置
+
+将[genesis-1029](https://github.com/bttcprotocol/launch/blob/master/testnet-1029/sentry/validator/delivery/config/genesis.json)或[genesis-199](https://github.com/bttcprotocol/launch/blob/master/mainnet-v1/sentry/validator/delivery/config/genesis.json)替换至路径：`/data/bttc/node/deliveryd/config/genesis.json`。
+
+#### 配置config.toml 
+
+修改配置文件`/data/bttc/node/deliveryd/config/config.toml`的seeds字段。
+在config.toml中，改变以下内容。
+
+  ##### seeds - 种子节点地址由一个节点ID、一个IP地址和一个端口组成。使用上面配置的哨兵节点的node_id，它可能看起来像:
+        seeds="node_id_of_your_sentry_node@ip_of_your_sentry_node:26656"
+
+### 启动Delivery validator节点
+
+#### 启动delivery
+
+```sh
+nohup sh delivery-start.sh>>logs/deliveryd.log 2>&1 &
+```
+
+#### 启动后续服务
+
+```sh
+nohup sh delivery-server-start.sh>>logs/rest-server.log 2>&1 &
+nohup sh delivery-bridge-start.sh>>logs/bridge.log 2>&1 &
+```
+
+### 配置BTTC validator节点
+
+#### 替换BTTC的创世文件
+
+BTTC创世文件路径:`/data/bttc/node/bttc/genesis.json`
+
+将[genesis-1029](https://github.com/bttcprotocol/launch/blob/master/testnet-1029/sentry/validator/bttc/genesis.json)或[genesis-199](https://github.com/bttcprotocol/launch/blob/master/mainnet-v1/sentry/validator/bttc/genesis.json)替换至上述路径。
+
+#### 配置static_nodes.json
+
+修改static_nodes.json文件`/data/bttc/node/bttc/static_nodes.json`的种子字段。
+
+在static_nodes.json中，编辑该文件并添加上面配置的bttc哨兵节点信息，看起来像:
+     [
+      "enode://enode_id_of_your_sentry_node@_of_your_sentry_node:30303"
+     ]
+
+    
+### 初始化BTTC validator节点
+
+```sh
+sh bttc-setup.sh
+```
+
+### 启动BTTC validator节点
 
 ```sh
 nohup sh bttc-start.sh >>logs/bttc-start.log 2>&1 &
